jdbc repo class created and expansion of requests